--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 
     <header>
-      <h1>EL OSO POLAR DEL POLO SUR</h1>
-      <p>La venganza de los caidos</p>
+      <h1>Natch der un toten</h1>
+      <p>4 soldados atrapados</p>
     </header>
 
 
@@ -27,7 +27,7 @@
 
 
     <footer>
-      <p>EL OSO POLAR ESTABA VOLANDO POR LOS CIELOS CUANDO MIRO ASI POR DEBAJO DEL HOMBRO UN HELICOPERO CON CANTINFLAS DENTRO. FIN</p>
+      <p>fernando gameros plascencia 2da secundaria</p>
     </footer>
 
 
