TRATE DE CAMBIAR EL COLOR

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pagina web de prueba</title>
+    <title>NACHT DER UNTOTEN</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -22,7 +22,8 @@
 
 
     <main>
-      <img id="imagenMain" src="https://previews.123rf.com/images/andreanita/andreanita1412/andreanita141200001/34919606-oso-polar-ursus-maritimus-cachorro-saliendo-den-y-jugar-parque-nacional-de-wapusk-canad%C3%A1.jpg" alt="Imagen Main">
+      <img id="imagenMain" src="https://static.wikia.nocookie.net/cod/images/1/16/Nacht_der_Untoten.jpg/revision/latest?cb=20111102150243&path-prefix=es" alt="Imagen Main">
+      <img id="imagenMain" " alt="Imagen Main">
     </main>
 
 
